@startuml

title __PATTERN's Class Diagram__\n

  namespace observer {
    namespace pattern {
      class observer.pattern.BarChartObserver {
          - courseData : Vector<CourseRecord>
          + BarChartObserver()
          + paint()
          + update()
      }
    }
  }
  

  namespace observer {
    namespace pattern {
      class observer.pattern.CourseController {
          - coursePanel : JPanel
          - sliders : Vector<JSlider>
          + CourseController()
          + actionPerformed()
          + addCourse()
          {static} + main()
          + stateChanged()
          + update()
      }
    }
  }
  

  namespace observer {
    namespace pattern {
      class observer.pattern.CourseData {
          - courseData : Vector<CourseRecord>
          + CourseData()
          + addCourseRecord()
          + changeCourseRecord()
          + getUpdate()
      }
    }
  }
  

  namespace observer {
    namespace pattern {
      abstract class observer.pattern.PushObservable {
          # observers : Vector<Observer>
          + Observable()
          + attach()
          + detach()
          {abstract} + getUpdate()
          + notifyObservers()
      }
    }
  }
  

  namespace observer {
    namespace pattern {
      interface observer.pattern.PushObserver {
          {abstract} + update()
      }
    }
  }
  

  observer.pattern.BarChartObserver .up.|> observer.pattern.PushObserver
  observer.pattern.BarChartObserver -up-|> javax.swing.JPanel
  observer.pattern.CourseController .up.|> java.awt.event.ActionListener
  observer.pattern.CourseController .up.|> javax.swing.event.ChangeListener
  observer.pattern.CourseController .up.|> observer.pattern.PushObserver
  observer.pattern.CourseController -up-|> javax.swing.JPanel
  observer.pattern.CourseController o-- observer.pattern.CourseData : courseData
  observer.pattern.CourseData -up-|> observer.pattern.PushObservable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
